force-app/main/default/objects/CTRSharePointFolder__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Button_Name__c</fullName>
        <label>Button Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <label>Folder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                    <default>true</default>
                    <label>Common</label>
                </value>
                <value>
                    <fullName>1100 TOP</fullName>
                </value>
                <value>
                    <fullName>1300 TPX</fullName>
                </value>
                <value>
                    <fullName>1400 TLB</fullName>
                </value>
                <value>
                    <fullName>1700 LABIX</fullName>
                </value>
                <value>
                    <fullName>2000 TXTH</fullName>
                </value>
                <value>
                    <fullName>9100 TSV</fullName>
                </value>
                <value>
                    <fullName>9200 TSR</fullName>
                </value>
                <value>
                    <fullName>9300 JSKem</fullName>
                </value>
                <value>
                    <fullName>9400 TXIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main__c</fullName>
        <label>Main</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object_Name__c</fullName>
        <label>Salesforce Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubFolder__c</fullName>
        <label>SubFolder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Lead</fullName>
                    <default>true</default>
                    <label>01 Lead</label>
                </value>
                <value>
                    <fullName>02 CTR</fullName>
                </value>
                <value>
                    <fullName>01 Customer</fullName>
                </value>
                <value>
                    <fullName>02 Supplier</fullName>
                </value>
                <value>
                    <fullName>03 Hedging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRSharePointFolder</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Button_Name__c</columns>
        <columns>Salesforce_Object_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Main__c</columns>
        <columns>Folder__c</columns>
        <columns>SubFolder__c</columns>
        <columns>Path__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
</CustomObject>